--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build
         run: npm run build --if-present
       - name: Unit Tests
-        run: npm run test:unit
+        run: npm run test
       - name: Install Browser
         run: npx playwright install chromium --with-deps
       - name: E2E tests
